java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testCreateFieldException-hints.pass
Create field ren in org.netbeans.test.java.hints.CreateFieldException
